feat: 인물, 캐릭터 화면 기능 추가 및 버그 수정, 리팩토링 적용
백엔드:
- person, character 하위 클래스 추가(feat)
- API DTO 파일 네이밍 개선(refactor)
- 공통 상수 추가, Enum 클래스 네이밍 개선(refactor)
- 중복 로직을 헬퍼 클래스로 분리(refactor)
- 코멘트 동기화 및 불필요한 코멘트 수정(refactor)
- SonarQube(SonarLint) 도입으로 인한 정적 분석 이슈 대응(refactor)
- 불필요한 테스트 클래스 삭제(refactor)

프론트엔드:
- person, character 하위 컴포넌트 및 훅 추가(feat)
- 공통 메세지 추가(feat)
- 자동완성리스트에서 문자열 중간에 검색어가 포함된 경우에 표시되지 않는 버그 수정(fix)
- react query 캐시관리 처리를 공통 설정에서 staleTime,gcTime 으로 관리하도록 변경(refactor)
- 컴포넌트 내에 중복 로직 통합(refactor)
- 코멘트 동기화 및 불필요한 코멘트 수정(refactor)